给mini_frame添加路由

--- a/04_mini_frame_route/html/index.html
+++ b/04_mini_frame_route/html/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
-<div id="index">index页面</div>
+    <div id="index">我是index.html</div>
 </body>
 </html>
